# gembiler

./: Cargo.toml  Makefile  README.md  README.txt  rustfmt.toml
parser/: Cargo.toml
parser/src/: lib.rs  program.pest
parser/src/ast/: mod.rs  nodes.rs  visitor.rs
playground/: Cargo.toml
playground/src/: main.rs
src/: lib.rs  main.rs  verifier.rs
src/code_generator/: mod.rs  translator.rs  verifier.rs
src/code_generator/translator/: mod.rs
src/tests/: verifier.rs
test-data/: Cargo.toml  program0.mr
test-data/files/: error8.imp  program0.imp
test-data/src/: data.rs  lib.rs
test-data/src/data/: offset_collection.rs
tests/: intermediate.rs  translator.rs  verifier.rs
virtual-machine/: Cargo.toml
virtual-machine/src/: instruction.rs  interpreter.rs  lib.rs  main.rs  parser.rs
virtual-machine/src/interpreter/: mod.rs  run.rs  tests.rs  world.rs
virtual_machine/: Cargo.toml
virtual_machine/src/: assembler.pest  instruction.rs  main.rs  parser.rs
