[package]
name = "gembiler"
version = "0.1.0"
authors = ["Jakub Dąbek <jakub.dabek@gmail.com>"]
edition = "2018"
default-run = "gembiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["./parser", "./virtual-machine", "./playground"]

[features]
bignum = ["virtual-machine/bignum"]

[dependencies]
parser = { path = "./parser" }
virtual-machine = { path = "./virtual-machine" }
