[package]
name = "gembiler"
version = "0.3.0"
authors = ["Jakub Dąbek <jakub.dabek@gmail.com>"]
edition = "2018"
default-run = "gembiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["./parser", "./virtual-machine", "./test-data", "./playground"]

[features]
bignum = ["virtual-machine/bignum"]
default = ["bignum"]

[dependencies]
parser = { path = "./parser" }
virtual-machine = { path = "./virtual-machine" }
test-data = { path = "./test-data" }
