[package]
name = "virtual-machine"
version = "0.1.0"
authors = ["Jakub Dąbek <jakub.dabek@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "interpreter"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
bignum = ["num-bigint", "num-traits"]
default = ["bignum"]

[dependencies]
pest = "2.1"
pest_derive = "2.1"
rand = "0.5"
num-bigint = { version = "0.2", optional = true, features = ["rand"] }
num-traits = { version = "0.2", optional = true }
