[package]
name = "virtual_machine"
version = "0.1.0"
authors = ["Jakub Dąbek <jakub.dabek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
bignum = ["num-bigint"]

[dependencies]
pest = "2.1"
pest_derive = "2.1"
rand = "0.7"
num-bigint = { version = "0.2", optional = true}
